--- a/views/slide/slide.ejs
+++ b/views/slide/slide.ejs
@@ -1,7 +1,7 @@
 <% include ../partials/header %>
 <div class="ui main text container centering">
     <div class="ui huge header">Slides</div>
-    <a class="ui orange basic button" href="/slide/new">Add New Slide</a>
+    <a class="ui orange basic button" href="slide/new">Add New Slide</a>
     <div class="ui top attached segment">
     <div class="ui two column grid">
             <%if(slides && slides.length >0){%>
@@ -19,10 +19,11 @@
                             <div class="description">
                                 <%=slide.description%>
                             </div>
+                            <a class="ui orange basic button" href="<%=slide.button_link%>"><%=slide.button_value%></a>
                         </div>
                         <div class="ui two bottom attached buttons">>
-                            <a class="ui attached yellow button" href="/slide/<%=slide._id%>/edit">Edit</a>
-                            <form style="width:100%;" action="/slide/<%=slide._id%>?_method=DELETE" method="POST">
+                            <a class="ui attached yellow button" href="slide/<%=slide._id%>/edit">Edit</a>
+                            <form style="width:100%;" action="slide/<%=slide._id%>?_method=DELETE" method="POST">
                                 <input style="width:100%;" type="submit" class="attached ui button negative" value="Delete">
                             </form>
                         </div>
