--- a/v3/views/about/about.ejs
+++ b/v3/views/about/about.ejs
@@ -54,5 +54,5 @@
      <h4 class="ui horizontal header divider">
             <a href="#root">-</a>
           </h4>
-
+</div>
 <% include ../partials/footer %>
