--- a/v3/views/partials/header.ejs
+++ b/v3/views/partials/header.ejs
@@ -10,29 +10,39 @@
     </head>
     <body>
   <body id="root">
-    <div class="ui large top fixed hidden menu">
-      <div class="ui container">
-        <a class=" item" href="/"><img src="http://laurieraccounting.com/wp-content/uploads/2015/09/small-logo.jpg" class="logo"></a> <a class="item" href="/about">About</a>
-        <a class="item">Hiring</a> <a class="item" href="/events">Events</a> <a class="item">Partners</a> <a class="item">Contacts</a> <a class="item">Edit Page</a> 
-        <div class="right menu">
-          <div class="item"><a class="ui button">Log in</a></div>
-        </div>
-      </div>
-    </div>
     <!--Sidebar Menu-->
     <div class="ui vertical inverted sidebar menu">
-      <a class=" item" href="/"><img src="http://laurieraccounting.com/wp-content/uploads/2015/09/small-logo.jpg" class="logo"></a> <a class="item" href="/about">About</a>
-        <a class="item">Hiring</a> <a class="item" href="/events">Events</a> <a class="item">Partners</a> <a class="item">Contacts</a> <a class="item">Edit Page</a>
+      <a class="item" href="/"><img src="http://laurieraccounting.com/wp-content/uploads/2015/09/small-logo.jpg" class="logo"></a>
+      <a class="item" href="/about">About</a>
+      <a class="item">Hiring</a>
+      <a class="item" href="/events">Events</a>
+      <a class="item" href="/partners">Partners</a>
+      <a class="item" href="/partners/events">Partners Events</a>
+      <a class="item">Contacts</a>
+      <a class="item">Edit Page</a>
     </div>
     <div class="pusher">
       <div class="ui vertical masthead center aligned segment">
-        <div class="ui container">
-          <div class="ui large secondary  pointing menu">
+        <div class="ui">
+          <div class="ui large secondary leftmost pointing menu">
             <a class="toc item"><i class="sidebar icon"></i></a>
-            <a class=" item" href="/"><img src="http://laurieraccounting.com/wp-content/uploads/2015/09/small-logo.jpg" class="logo"></a> <a class="item" href="/about">About</a>
-        <a class="item">Hiring</a> <a class="item" href="/events">Events</a> <a class="item">Partners</a> <a class="item">Contacts</a> <a class="item">Edit Page</a>
-            <div class="right item">
-              <a class="ui  button">Log in</a>
+            <a class="item" href="/"><img src="http://laurieraccounting.com/wp-content/uploads/2015/09/small-logo.jpg" class="logo"></a> 
+            <a class="item" href="/about">About</a>
+            <a class="item">Hiring</a>
+            <a class="item" href="/events">Events</a>
+              
+            <div class="ui pointing dropdown link item">
+              <span class="text">Partners</span>
+              <i class="dropdown icon"></i>
+              <div class="menu">
+                <a href="/partners" class="item">Partners</a>
+                <a href="/partners/events" class="item">Partner Events</a>
+              </div>
+            </div>
+
+              <a class="item">Contacts</a> <a class="item">Edit Page</a>
+            <div class="right item rightmost">
+              <a class="ui button">Log in</a>
             </div>
           </div>
         </div>
