--- a/v3/views/members/members-new.ejs
+++ b/v3/views/members/members-new.ejs
@@ -1,7 +1,7 @@
 <% include ../partials/header %>
     <div class="ui main text container segment">
        <div class="ui huge header centering">Add Memeber</div>
-       <form class="ui form" action="/about/members" method="POST">
+       <form class="ui form" action="/admin/members" method="POST">
            <div class="field">
                <label>Title</label>
                <input type="text" name="member[position]" placeholder="position" required>
