--- a/v3/views/partials/footer.ejs
+++ b/v3/views/partials/footer.ejs
@@ -47,6 +47,19 @@
       });
       $('.ui.dropdown')
         .dropdown();
+      
+    </script>
+    <script>
+    $("#slideshow > div:gt(0)").hide();
+
+    setInterval(function() { 
+      $('#slideshow > div:first')
+        .fadeOut(0)
+        .next()
+        .fadeIn(1000)
+        .end()
+        .appendTo('#slideshow');
+    },  3000);
     </script>
   </body>
 </html>
